toml-pretty-deser/tests/snapshots/k01__non_numeric_port_key_gives_validation_error.snap
---
source: toml-pretty-deser/tests/k01.rs
expression: pretty
---
Error 1/1
  ╭─test.toml
  ┆
2 │ [services]
3 │ 8080 = "http"
4 │ not-a-port = "bad"
  ┆ ─────┬────
  ┆      │
  ┆      ╰───────────── not a valid port number: invalid digit found in string
──╯
