toml-pretty-deser/tests/snapshots/k01__reserved_port_zero_gives_validation_error.snap
---
source: toml-pretty-deser/tests/k01.rs
expression: pretty
---
Error 1/1
  ╭─test.toml
  ┆
2 │ [services]
3 │ 0 = "reserved"
  ┆ ┬
  ┆ │
  ┆ ╰────────────── port 0 is reserved
──╯
